fix: option spacings

--- a/packages/fuselage/src/components/Option/Option.styles.scss
+++ b/packages/fuselage/src/components/Option/Option.styles.scss
@@ -19,7 +19,7 @@ $variants: (
   @include clickable;
   @include typography.use-font-scale(p2);
 
-  padding: lengths.padding(4) lengths.padding(16);
+  padding: lengths.padding(4) lengths.padding(12);
 
   list-style: none;
 
@@ -30,7 +30,7 @@ $variants: (
 
     padding-block-start: lengths.padding(8);
     padding-block-end: lengths.padding(4);
-    padding-inline: lengths.padding(16);
+    padding-inline: lengths.padding(12);
 
     color: colors.font(default);
   }
@@ -88,7 +88,7 @@ $variants: (
     justify-content: center;
     align-items: center;
 
-    min-width: lengths.size(20);
+    min-width: lengths.size(28);
     min-height: lengths.size(20);
   }
 
